<resources>
  <string name="app_name">MultipleGridRecyclerView_demo</string>
  <string name="empty_text">No data!</string>

  <string name="fab_add_cellimage_3x1_text">Add CellImage 3x1</string>
  <string name="fab_add_cellimage_2x2_text">Add CellImage 2x2</string>
  <string name="fab_add_cellimage_1x1_text">Add CellImage 1x1</string>
  <string name="fab_add_image_text">Add Image</string>
  <string name="fab_add_text_text">Add Text</string>
  <string name="fab_clear_text">Clear</string>

  <string name="fab_increase_columns_text">+ Columns</string>
  <string name="fab_decrease_columns_text">- Columns</string>
  <string name="fab_increase_ratio_text">Ratio +0.1</string>
  <string name="fab_decrease_ratio_text">Ratio -0.1</string>
</resources>
